# JKAProto

./: .gitignore  AnimationState.cpp  AnimationState.h  CMakeLists.txt  COPYRIGHT.md  CommandExecutor.cpp  CommandExecutor.h  CommandParser.cpp  CompressedMessage.cpp  CompressedMessage.h  Geometry.h  Huffman.cpp  Huffman.h  JKAInfo.cpp  JKAProto.sln  JKAProto.vcxproj  JKAProto.vcxproj.filters  README.md  _HuffmanTable.h
data/: ConnlessPacketsList.inc
include/: CommandParser.h
include/JKAProto/: AdvancedCommandExecutor.cpp  AdvancedCommandExecutor.h  AnimationState.h  CEntity.h  CTHash.h  ClientConnection.h  ClientEventsListener.h  ClientGameState.h  ClientPacketParser.h  CommandExecutor.h  CommandParser.h  CompressedMessage.h  Geometry.h  Huffman.h  JKAInfo.h  ReliableCommandsStore.h  ServerPacketParser.h  SharedDefs.h  Snapshot.h  StringLiteral.h  _HuffmanTable.h
include/JKAProto/jka/: Buttons.h  JKAConstants.h  (+4 more)
include/data/: JKAEvents.inc
include/packets/: Connect.h  Getservers.h  Print.h
jka/: Gencmds.h  JKAAnims.cpp  JKAAnims.h  JKAConstants.h  JKADefsNet.h  JKAEvents.cpp  JKAEvents.h  JKAFunctions.cpp  JKAFunctions.h  JKAStructs.h  Usercmd.h
packets/: AllConnlessPackets.h  ConnlessPacketFactory.cpp  ConnlessPacketFactory.h  Getchallenge.h  Getinfo.h  Rcon.h
src/: AnimationState.cpp  ClientPacketParser.cpp  CommandExecutor.cpp  CommandParser.cpp  CompressedMessage.cpp  Huffman.cpp  JKAInfo.cpp  ServerPacketParser.cpp
src/jka/: JKAAnims.cpp  JKAEvents.cpp  JKAFunctions.cpp
src/packets/: ConnlessPacketFactory.cpp
src/protocol/: CompressedMessage.cpp
(+16 files in other folders)
